添加代码生成配置文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=v-server
 
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password = 111111
-spring.datasource.url = jdbc:mysql:///v?useUnicode=true&characterEncoding=UTF-8 
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/vhr?useUnicode=true&characterEncoding=UTF-8
+
+server.port = 8082
